tests/algorithms/x/Java/physics/lorentz_transformation_four_vector.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden777_lorentz_transformation_four_vector574934565/001/Main.java:36: error: incompatible types: Object[] cannot be converted to double[]
        return new double[][]{new Object[]{g, -g * b_1, 0.0, 0.0}, new Object[]{-g * b_1, g, 0.0, 0.0}, new double[]{0.0, 0.0, 1.0, 0.0}, new double[]{0.0, 0.0, 0.0, 1.0}};
                              ^
/tmp/TestJavaTranspiler_Algorithms_Golden777_lorentz_transformation_four_vector574934565/001/Main.java:36: error: incompatible types: Object[] cannot be converted to double[]
        return new double[][]{new Object[]{g, -g * b_1, 0.0, 0.0}, new Object[]{-g * b_1, g, 0.0, 0.0}, new double[]{0.0, 0.0, 1.0, 0.0}, new double[]{0.0, 0.0, 0.0, 1.0}};
                                                                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden777_lorentz_transformation_four_vector574934565/001/Main.java:45: error: method concat in interface Stream<T#2> cannot be applied to given types;
            res = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(res), java.util.Arrays.stream(new double[]{value})).toArray(double[]::new)));
                                                     ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
3 errors
